Add semantic html structure and add detail in each part

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -16,7 +16,8 @@
         </header>
         <main>
             <table>
-                <caption>Detailed Schedule of Events for TechCon
+                <caption>
+                    Detailed Schedule of Events for TechCon
                     2024
                 </caption>
                 <tr>
