--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -20,12 +20,21 @@
                     Detailed Schedule of Events for TechCon
                     2024
                 </caption>
-                <tr>
-                 <th scope="col">Time</th>
-                 <th scope="col">Session</th>
-                 <th scope="col">Speakers</th>
-                </tr>
-                 
+                <thead>
+                    <tr>
+                        <th scope="col">Time</th>
+                        <th scope="col">Session</th>
+                        <th scope="col">Speakers</th>
+                    </tr>
+                </thead>
+                  
+                <tbody>
+                    <tr>
+                        <td>10:00 - 11:00 am</td>
+                        <td>Mobile Development empowerment</td>
+                        <td>Mobile Team</td>
+                    </tr>
+                </tbody>
                 <tr>
                  <td>10:00AM</td>
                  <td>Morning</td>
@@ -35,7 +44,7 @@
         </main>
 
         <footer>
-             <p>&copy; All reserved TechCon 2024</p>
+            <p>&copy; All reserved TechCon 2024</p>
         </footer>
     </body>
 </html>
