--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0"
         <title>TechCon 2024</title>
     </head>
     <body>
@@ -14,11 +15,13 @@
                 <li><a href="contact.html">Contact</a></li>
             </nav>
         </header>
+
         <main>
+
             <table>
+
                 <caption>
-                    Detailed Schedule of Events for TechCon
-                    2024
+                    Detailed Schedule of Events for TechCon2024
                 </caption>
                 <thead>
                     <tr>
