fix caption again

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -40,6 +40,61 @@
                         <td>IT Management</td>
                         <td>Pres. Donald Trump</td>
                     </tr>
+                    <tr>
+                        <td>1:45 -2:00</td>
+                        <td>break</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>2:00 - 2:45</td>
+                        <td>Computing power</td>
+                        <td>John Kent</td>
+                    </tr>
+                    <tr>
+                        <td>2:50 - 3:45</td>
+                        <td>AI for Learning</td>
+                        <td> James Keller</td>
+                    </tr>
+                    <tr>
+                        <td>4:00 - 4:25</td>
+                        <td>Theroy of Computer</td>
+                        <td>John brand</td>
+                    </tr>
+                    <tr>
+                        <td>4:45 - 5:00</td>
+                        <td>Why AI is Important</td>
+                        <td> Wentworth Miller</td>
+                    </tr>
+                    <tr>
+                        <td>5:15 - 5:45</td>
+                        <td> Prompting</td>
+                        <td> Alfred Tuva</td>
+                    </tr>
+                    <tr>
+                        <td>5:55 - 6:25</td>
+                        <td> Frontend development</td>
+                        <td>James Dunbar</td>
+                    </tr>
+                    <tr>
+                        <td>6:45 - 7:15</td>
+                        <td> Bits and Storage</td>
+                        <td>James Johnson</td>
+                    </tr>
+                    <tr>
+                        <td>7:35 - 8:15</td>
+                        <td>Computer Hardware</td>
+                        <td>Hannah Kulo</td>
+                    </tr>
+                    <tr>
+                        <td>8:15 - 9:00</td>
+                        <td>refreshment</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td>9:00 9:45</td>
+                        <td>wrap-up</td>
+                        <td> Team</td>
+                    </tr>
                 </tbody>
             </table>
         </main>
