fix footer across all pages

--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -2,11 +2,11 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title> TechCon 2024</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <title>Schedule TechCon 2024</title>
     </head>
     <body>
         <header>
-            <h1>Schedule for TechCon 2024</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
@@ -28,75 +28,18 @@
                         <th scope="col">Speakers</th>
                     </tr>
                 </thead>
-
                 <tbody>
                     <tr>
-                       <td>10:00 - 11:00</td>
-                       <td>AI Model</td>
-                       <td> Dr. Mark Alonzo</td>
-                    </tr>
-                    <tr>
-                        <td>12:00 - 1:00</td>
-                        <td>IT Management</td>
-                        <td>Pres. Donald Trump</td>
-                    </tr>
-                    <tr>
-                        <td>1:45 -2:00</td>
-                        <td>break</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>2:00 - 2:45</td>
-                        <td>Computing power</td>
-                        <td>John Kent</td>
-                    </tr>
-                    <tr>
-                        <td>2:50 - 3:45</td>
-                        <td>AI for Learning</td>
-                        <td> James Keller</td>
-                    </tr>
-                    <tr>
-                        <td>4:00 - 4:25</td>
-                        <td>Theroy of Computer</td>
-                        <td>John brand</td>
-                    </tr>
-                    <tr>
-                        <td>4:45 - 5:00</td>
-                        <td>Why AI is Important</td>
-                        <td> Wentworth Miller</td>
-                    </tr>
-                    <tr>
-                        <td>5:15 - 5:45</td>
-                        <td> Prompting</td>
-                        <td> Alfred Tuva</td>
-                    </tr>
-                    <tr>
-                        <td>5:55 - 6:25</td>
-                        <td> Frontend development</td>
-                        <td>James Dunbar</td>
-                    </tr>
-                    <tr>
-                        <td>6:45 - 7:15</td>
-                        <td> Bits and Storage</td>
-                        <td>James Johnson</td>
-                    </tr>
-                    <tr>
-                        <td>7:35 - 8:15</td>
-                        <td>Computer Hardware</td>
-                        <td>Hannah Kulo</td>
-                    </tr>
-                    <tr>
-                        <td>8:15 - 9:00</td>
-                        <td>refreshment</td>
-                        <td></td>
-                    </tr>
-                    <tr>
-                        <td>9:00 9:45</td>
-                        <td>wrap-up</td>
-                        <td> Team</td>
+                        <td>1:00 - 1:45</td>
+                        <td>AI Learning</td>
+                        <td>Dr. Mark Alonzo</td>
                     </tr>
                 </tbody>
             </table>
         </main>
+
+        <footer>
+            <p>©copyright 2024 TechCon Conference. All rights reserved</p>
+        </footer>
     </body>
 </html>
