--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -34,7 +34,7 @@
         </main>
          
         <footer>
-           <p>&copy; All reserved TechCon 2024</p>
+           <p>©copyright 2024 TechCon Conference. All rights reserved</p>
         </footer>
     </body>
 </html>
