Add a registration form to the page

--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -19,6 +19,7 @@
     <main>
         <form>
             <label>Full name:<input type="text" placeholder="Enter your name"></label>
+            <label>Email:<input type="email" placeholder="example@mail.com"></label>
             <label>Password:<input type="password" placeholder="password"></label>
             <label><input type="checkbox">agree with terms and condition</label>
             <button type="submit">Register Now</button>
